   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - New features
      - Added initial APISpark extension. Issue #875.
      - Added Jetty client for HTTP and HTTPS. Issue #512.
        Contributed by Tal Liron.      
    - Enhancements
      - Upgraded project to Java 7. Issue #874.
      - Upgraded Jetty connector to version 9.1.3. Issue #793.
        Contributed by Tal Liron.
      - Upgraded Servlet API to version 3.1.
      - Upgraded JAX-RS API to version 2.0.
      - Added JBoss RESTEasy library version 3.0.6.
      - Added Reference constructor taking two URI instances.
    - Bug fixed
      - 
    - Misc
      - Refactored test cases to test all combinations of connectors
        including server (Internal, Jetty, NIO, Simple) and
        client (Apache, Internal, Jetty, NIO)
      - Started integration of Restlet JAX-RS extension with RESTEasy.