@@ -1,7 +1,7 @@
 <HTML>
 <BODY>
 Integration with Jetty @minor-version@ which is a new implementation of the
-popular Jetty HTTP server able to leverage NIO. 
+popular Jetty web server. 
 
 @since Restlet 1.0
 @see <a href="@home-uri@">Jetty HTTP server</a>
